# jiraGPT

./: .gitignore  README.md  package.json
API/: .env.example  README.md  __init__.py  main.py  package-lock.json  package.json  pyproject.toml  temp.json
API/jira/: api.py
API/models/: jira.py
API/src/: app.controller.ts  app.module.ts  main.ts
API/src/jira/: jira.controller.ts  jira.module.ts  jira.service.ts
API/utils/: aiConfig.ts  axios.ts  logger.ts
Model/: .env.example  .gitignore  aiModel.py  index.js  package-lock.json  package.json
Model/utils/: logger.js
SlackBot/: .env.example  app.js  index.js  manifest.json  package-lock.json  package.json
SlackBot/config/: axiosConfig.js
SlackBot/listeners/: index.js
SlackBot/listeners/commands/: createjira.js  find.js  groom.js  index.js
SlackBot/listeners/events/: app-mention.js  index.js
SlackBot/listeners/messages/: greetings.js  index.js
SlackBot/services/: converse.js  createJira.js  groom.js  search.js
